<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 	
    <!--  
    <PreferenceScreen
        android:key="button_default_usage_mode"
        android:title="@string/systemOpMode"
        android:persistent="false">
        
    </PreferenceScreen>
    -->
    <PreferenceCategory android:title="@string/pref_ip_profile" >
        <EditTextPreference
                android:title="@string/pref_IP"
                android:summary="@string/pref_IP_summary"
                android:defaultValue="10.1.1.1"
                android:key="prefNetworkIP"/>
        <EditTextPreference
                android:title="@string/pref_Mask"
                android:summary="@string/pref_Mask_summary"
                android:defaultValue="255.255.0.0"
                android:key="prefNetworkMask"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/plu_type_setting" >        
        <ListPreference
            android:key="prefPLUType"
            android:entries="@array/selectPLUtype"
            android:entryValues="@array/pluSelectPLUTypeValues"
            android:summary="@string/pref_type_summary"
            android:defaultValue="Fruit"            
            android:title="@string/plu_type_title" />
    </PreferenceCategory>
    
 	 
</PreferenceScreen>
